@@ -1,0 +1,15 @@
+#
+# Test of the debugger 'macro' command
+#
+set basename on
+set trace on
+set skip off
+show highlight
+set highlight
+set highlight reset
+set highlight off
+set highlight plain
+set highlight dark
+set highlight light
+set highlight light reset
+quit
