@@ -1,0 +1,14 @@
+(gcd.py:10):
+-> 10 """
+Set basename is on.
+Set event is on.
+Set stopping is off.
+output set to not use terminal escape sequences
+output set to not use terminal escape sequences
+output set to not use terminal escape sequences
+output set to not use terminal escape sequences
+output set to not use terminal escape sequences
+output set for terminal with escape sequences for a dark background
+output set for terminal with escape sequences for a light background
+output set for terminal with escape sequences for a light background
+trepan3k: That's all, folks...
