@@ -31,8 +31,24 @@ Set whether we use terminal highlighting. Permissable values are:
        light:  terminal background is light (the default)
        dark:   terminal background is dark
 
+Examples:
+--------
+
+    set highlight off   # no highlight
+    set highlight plain # same as above
+    set highlight       # same as above
+    set highlight dark  # terminal has dark background
+    set highlight light # terminal has light background
+    set highlight reset light # clear source-code cache and
+                              # set for light background
+    set highlight reset # clear source-code cache
+
 If the first argument is *reset*, we clear any existing color formatting
-and recolor all source code output."""
+and recolor all source code output.
+
+See also:
+---------
+`show highlight`"""
 
     in_list    = True
     min_abbrev = len('hi')
@@ -55,8 +71,11 @@ and recolor all source code output."""
         pass
 
     def run(self, args):
-        if len(args) > 1 and 'reset' == args[0]:
-            highlight_type = self.get_highlight_type(args[1])
+        if len(args) >= 1 and 'reset' == args[0]:
+            if len(args) >= 2:
+                highlight_type = self.get_highlight_type(args[1])
+            else:
+                highlight_type = self.debugger.settings['highlight']
             if not highlight_type: return
             clear_file_format_cache()
         elif len(args) == 0:
